# auto-diff

./: .gitignore  .pre-commit-config.yaml  README.md  autodiff.ipynb  backpropagation.ipynb  calc.py  info.txt  jacobian.py  linting.py  mypy.py  pyproject.toml  python.py  run.sh  t2_ref.txt  test-embeddings.ipynb  test-embeddings.py  test-typing.ipynb  test-typing.py  testing_import.py  typing-hard.py
.github/workflows/: pre-commmit.yml  publish.yaml  publish.yml  pylint.yml
auto_diff/: autodiff.ipynb  backprop.ipynb  dot-prod.ipynb  jacobian.py  mlp_hand.ipynb  test-embeddings.ipynb  test-embeddings.py  test-typing.py  typing-hard.py
auto_diff/lint/: calc.py  linting.py  mypy.py  python.py
models/: best_model.pkl
torch/: dot-prod.ipynb
