[build-system]
requires = ["setuptools>=61.0.0", "wheel"]

[tool.setuptools.package-data]
"auto_diff" = ["*.ipynb", "torch_studies/*.ipynb"]

[project]
name = "auto_diff"
version = "0.0.1"
description = "Auto differentiation project and building a package"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jax>=0.5.3",
    "keras>=3.9.1",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "ruff>=0.11.6",
    "pylint>=3.1.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "build>=1.2.2",
    "transformers>=4.51.3",
    "jaxtyping>=0.3.2",
    "torchtyping>=0.1.5",
]

[tool.ruff.lint.isort]
force-wrap-aliases = true

[tool.ruff.lint]
select = ["E", "F", "B", "ERA", "W"]
extend-select = ["PLC", "PLE", "PLW", "PLR"]

[tool.mypy]
strict = true

[tool.isort]
profile = "black"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
