[project]
name = "auto-diff-RMAV"
description = "Auto-diff for RMAV"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "ruff>=0.11.10",
    "torch>=2.7.0",
    "torchtyping>=0.1.5",
    "transformers>=4.51.3",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "PERF", "PLR"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}